Bug 115453 - Confusion on the Impress Views Tab Bar: UI
Summary: Confusion on the Impress Views Tab Bar: UI
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Álex Puchades
URL:
Whiteboard: target:6.1.0
Keywords: difficultyBeginner, easyHack, skillCpp
Depends on:
Blocks:
 
Reported: 2018-02-05 02:55 UTC by David F Smith
Modified: 2019-02-16 16:34 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David F Smith 2018-02-05 02:55:34 UTC
Description:
The Views Tab Bar has five tabs.  Four of them (Normal, Outline, Notes, and Slide Sorter) show one or more slides in the open presentation.  The other (now called Master Handout) is different, in that it doesn't show the handouts but rather the layout that will be applied to the handouts.  Even worse, when that tab is selected, Impress is in "Master" mode, so selecting Normal opens the Slide Master, and selecting Notes opens the Notes Master.  To get back to the Normal view of my slides requires that I know to choose View - Normal (same word, different action) or to click Close Master View on the Sidebar.  (Slide Sorter is even stranger: it shows all of my slides, but if I double-click on one, it takes me to the Slide Master, not to the Normal View.)  I find this confusing.
Please consider either:
* removing Handout Master from the Views Tab Bar; or 
* adding Slide Master and Notes Master to the Views Tab Bar, and changing the Normal and Notes tabs to return to non-Master views

Steps to Reproduce:
1. Open or create a presentation with several slides.
2. If necessary, show the Views Tab Bar (View - Views Tab Bar).
3. Select the Notes tab to see the notes view of the selected slide, then select the Normal tab to see that slide in normal view.
4. Select the Master Handout tab.  A diagram of the handout is shown.
5. Select the Normal tab.  The Slide Master (not a slide) is shown.


Actual Results:  
Normal and Notes tabs give different results, depending on whether Master Handout was selected first.  A user encountering this for the first time might not know how to disable the Master view.

Expected Results:
I would prefer for the Normal tab to always show the normal view of a slide in my presentation, the Notes tab to always show the notes, etc.  In order to see master slide, notes, etc., I want to select different tabs.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.132 Safari/537.36
Comment 1 Heiko Tietze 2018-02-11 11:17:43 UTC
Any reason to keep Handout Master?
Comment 2 Regina Henschel 2018-02-11 13:44:26 UTC
(In reply to Heiko Tietze from comment #1)
> Any reason to keep Handout Master?

It has been confusing from the beginning in StarOffice. Removing the concrete preview images and renaming the tab to "Master Handout" has not solved the confusion.

So there are several ways to solve it:
A) Remove "Master Handout" from the tabs.
B) Provide tabs for the other masters too and switch to "normal" when going to a normal view tab and to "master" when going to a master view tab.
C) Keep tab "Master Handout" and make sure that going to Normal, Outlines and Notes always switches to normal mode. Suggestion: In addition move "Master Handout" after "Slide Sorter".

I personal prefer B, because if I decide to show the tabs, then they should help me that there is no need to use the menu. A different appearance of "master" tabs and "normal" tabs would be nice then. But I'm surely no ordinary user. On the other hand, I guess, ordinary users will likely do not use the tabs at all.
Comment 3 Heiko Tietze 2018-02-11 14:14:05 UTC
I would rather remove the master tabs. Also because we provide access to all views via the menu. Italo, as an Impress power user, what do you think?
Comment 4 Italo Vignoli 2018-02-11 22:10:26 UTC
I suggest to remove Master Handout (never used) from the Views Tab but do not remove at least Normal and Slide Sorter tabs as they are the most frequently accessed from Impress power users (and accessing the different views from the menu is not only slower but also different from applications such as PowerPoint and Keynote, which offer either an icon or something similar to the Views Tab).
Please consider that an Impress power (or simply frequent) user switches from Normal to Slide Sorter view very frequently because edits happen in Normal and slide ordering or reordering happen in Slide Sorter, but the two operations are not executed in bulk but by jumping back and forth, often to check that the position of the slide is OK after editing it, or that edits are consistent with the slide order.
Comment 5 David F Smith 2018-02-12 00:42:44 UTC
For what it's worth, I am a frequent user of Impress, and I agree with Italo's points.  I often switch among Normal, Notes, and Slide Sorter, and the Views Tab makes that very easy.
Comment 6 Heiko Tietze 2018-02-16 10:50:39 UTC
As there is agreement please kill the tab with fire. Destructive tasks are by nature easy hacks :-)

Good starting point could be sd/source/ui/framework/module/ViewTabBarModule.cxx
Comment 7 Commit Notification 2018-03-15 15:14:14 UTC
Álex Puchades committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17b57caf83425d086ac8aa5c89815ed3dc3bc286

tdf#115453 Remove Master Handout tab from Views Tab Bar

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 shubhamgoyal 2019-02-11 17:20:38 UTC
The bug still exists.
If I click master slide or master note or master handout from the views menu. Then the normal tab will show the master slide and Notes tab will show master note. The connection is not disconnected.

LO version - 6.3.0.0 - alpha
Comment 9 Xisco Faulí 2019-02-12 16:59:33 UTC
(In reply to shubh from comment #8)
> The bug still exists.
> If I click master slide or master note or master handout from the views
> menu. Then the normal tab will show the master slide and Notes tab will show
> master note. The connection is not disconnected.
> 
> LO version - 6.3.0.0 - alpha

Dear shubh,
This bug has been in RESOLVED FIXED status for more than 6 months.
If the issue is still reproducible with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/, please report a new issue in https://bugs.documentfoundation.org/enter_bug.cgi providing, if     needed, the steps and documents to reproduce it.
Thanks for your understanding and collaboration.
Closing as RESOLVED FIXED
Comment 10 Buovjaga 2019-02-16 16:34:26 UTC
(In reply to shubh from comment #8)
> The bug still exists.
> If I click master slide or master note or master handout from the views
> menu. Then the normal tab will show the master slide and Notes tab will show
> master note. The connection is not disconnected.
> 
> LO version - 6.3.0.0 - alpha

Well, this is how it has always been. In the case of going via the View menu, the user knows they are selecting a master view. The confusion regarding the Handout tab leading to a master view has been solved by removing the tab.