tdf#115453 Remove Master Handout tab from Views Tab Bar

The Views Tab Bar has had five tabs until now (Normal, Outline, Notes, Slide
Sorter and Master Handout). Before this commit, selecting the Master Handout
tab and then going back to the Normal or Notes tab showed the Slide/Notes
Master instead of the expected behaviour.

This commit removes the Master Handout Tab from the Views Tab Bar, with master
views remaining accessible through the View Menu.

Reviewed-on: https://gerrit.libreoffice.org/51320
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 17b57caf83425d086ac8aa5c89815ed3dc3bc286)
(cherry picked from commit d320692dcc77716df14a7f5a75be3779a5abddd4)

Change-Id: I017af5f29d154386e4f0910151c478956aa0985f