sd/source/ui/framework/module/ViewTabBarModule.cxx
@@ -174,14 +174,6 @@ void ViewTabBarModule::UpdateViewTabBar (const Reference<XTabBar>& rxTabBar)
             aNotesViewButton.ButtonLabel = SD_RESSTR(STR_NOTES_MODE);
             if ( ! xBar->hasTabBarButton(aNotesViewButton))
                 xBar->addTabBarButtonAfter(aNotesViewButton, aOutlineViewButton);
-
-            TabBarButton aHandoutViewButton;
-            aHandoutViewButton.ResourceId = FrameworkHelper::CreateResourceId(
-                FrameworkHelper::msHandoutViewURL,
-                xAnchor);
-            aHandoutViewButton.ButtonLabel = SD_RESSTR(STR_HANDOUT_MASTER_MODE);
-            if ( ! xBar->hasTabBarButton(aHandoutViewButton))
-                xBar->addTabBarButtonAfter(aHandoutViewButton, aNotesViewButton);
         }
     }
 }
